# experiments

./: .gitignore  README.md  pyproject.toml
attention/: mlp.py
attention/layers/: attention.py
notebook/: MLP.ipynb  Untitled.ipynb  attention_layer.ipynb
notebook/.ipynb_checkpoints/: attention_layer-checkpoint.ipynb
src/attention/: activations.py
src/attention/embeddings/: positional.py
src/attention/layers/: attention.py  encoder.py  mlp.py  normalization.py
tests/: test_blocks.py  test_embeddings.py  test_layers.py
